--- a/index.html
+++ b/index.html
@@ -10,15 +10,48 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <!-- import the webpage's javascript file -->
+        <script src="script.js" defer></script>
     </head>
     <body>
         <header>
-            <img class="photo" src="photo.png"/>
+            <!--<img class="photo" src="photo.png"/>-->
+            <div class="box"></div>
             <div class="TypingEffect_div">
                 <h1 class="TypingEffect_Line_1">HI, I'M <span>MATEUSZ STASIAK</span></h1>
                 <h1 class="TypingEffect_Line_2">AUTOMATIC CONTROL AND ROBOTICS STUDENT</h1>
                 <h1 class="TypingEffect_Line_3">AT THE POZNAŃ UNIVERSITY OF TECHNOLOGY.</h1>
             </div>
         </header>
+        <main>
+            
+        </main>
+        <footer>
+            <h1>Find me on:</h1>
+            <div class="SocialMedia_Bar">
+                <ul>
+                    <li style="--clr: #0e76a8">
+                        <a href="https://www.linkedin.com/in/mateusz-stasiak-802654270/" target="_blank">
+                            <i class="fa-brands fa-linkedin"></i>
+                            <span>Linkedin</span>
+                        </a>
+                    </li>
+                    <li style="--clr: #ffffff">
+                        <a href="https://github.com/M-Stasiak" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                            <span>Github</span>
+                        </a>
+                    </li>
+                    <li style="--clr: #ff0000">
+                        <a href="https://www.youtube.com/@matti_creation" target="_blank">
+                            <i class="fa-brands fa-youtube"></i>
+                            <span>Youtube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
